<resources>
    <string name="app_name">Blackpink</string>
    <string name="InYourArea">In Your Area</string>
    <string name="blackpink">BLACKPINK</string>
    <string name="newalbum">NEW ALBUMS</string>
    <string name="solo">SOLO</string>
    <string name="jennie">Kim Jennie</string>
    <string name="hopenot">Hope Not</string>
    <string name="bp">BlackPink</string>
    <string name="kickit">Kick It</string>
    <string name="killthislove">Kill This Love - BlackPink</string>
</resources>
